--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,14 @@ build/
 *.swp
 *.swo
 
-# 环境变量文件
+# 环境变量和配置文件
 .env
 .env.local
+.crypto_alert_config
 
-# 日志文件
+# 数据和日志文件
 *.log
+token_alerts.json
 
 # 测试覆盖率报告
 .coverage
